Adjust X wording and fallback profile display

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
     </li>
   <% else %>
     <li class="nav-item">
-      <%= link_to "Twitterでログイン", user_twitter_omniauth_authorize_path, method: :post, class: "btn btn-outline-primary px-4", data: { turbo: false } %>
+      <%= link_to "Xでログイン", user_twitter_omniauth_authorize_path, method: :post, class: "btn btn-outline-primary px-4", data: { turbo: false } %>
     </li>
   <% end %>
 </ul>
