--- a/app/views/toppages/edit.html.erb
+++ b/app/views/toppages/edit.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="withdraw my-5 text-center">
   <h1>退会</h1>
-  <p>Twitterとの連携を解除し、退会します。<br>
+  <p>Xとの連携を解除し、退会します。<br>
     なお、退会すると今までの質問がすべて削除されますのでご注意ください。</p>
   <%= link_to "退会する", registration_path,
     data: { confirm: "本当に退会しますか？" }, method: :delete,
