--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="signup my-5">
   <div class="text-center">
     <h3>Questerは、匿名での回答を募集できるサービスです。</h3>
-    <%= link_to "Twitterで登録/ログイン", user_twitter_omniauth_authorize_path,
+    <%= link_to "Xで登録/ログイン", user_twitter_omniauth_authorize_path,
         method: :post, class: "btn btn-primary btn-block py-3 mt-5", data: { turbo: false } %>
   </div>
 </div>
@@ -9,7 +9,7 @@
   <div class="text-center">
     <h3 class="my-3">Questerの使い方</h3>
     <h5>1.登録/ログインする</h5>
-    <p>Twitterアカウントを使って登録/ログインしましょう。</p>
+    <p>Xアカウントを使って登録/ログインしましょう。</p>
     <h5>2.質問する</h5>
     <p>疑問に思うことがあれば、何でも質問してみましょう。</p>
     <h5>3.回答する</h5>
