--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,12 +8,13 @@
 <%= image_tag(@post.image, width: "690", class: "img-fluid shadow-lg rounded-4", loading: "lazy") if @post.image.attached? %>
 
 <% is_owner = current_user == @user %>
+<% show_profile_fallback = !@post.image.attached? %>
 
 <% if is_owner %>
   <div class="share-toolkit card my-4">
     <div class="card-body d-flex flex-column flex-md-row align-items-md-center justify-content-between">
       <div class="share-actions w-100 w-md-auto d-flex flex-column flex-md-row gap-2">
-        <%= link_to "Twitterで共有", "https://twitter.com/intent/tweet?text=#{ERB::Util.url_encode("#{@user.username}さんの質問です #MyQuestion")}&url=#{CGI.escape(request.original_url)}",
+        <%= link_to "Xで共有", "https://twitter.com/intent/tweet?text=#{ERB::Util.url_encode("#{@user.username}さんの質問です #MyQuestion")}&url=#{CGI.escape(request.original_url)}",
             class: "btn btn-solid-primary text-center w-100", target: "_blank", rel: "noopener", data: { turbo: false } %>
       </div>
     </div>
@@ -21,18 +22,20 @@
 <% end %>
 
 <% unless is_owner %>
-  <div class="toppage-profile card my-5">
-    <div class="card-body">
-      <div class="media p-3 border rounded">
-        <%= link_to image_tag(avatar_url(@user), size: "80x80", class: "rounded-circle mr-3", loading: "lazy"),
-            user_path(@user) %>
-        <div class="media-body">
-          <h5><%= @user.username %></h5>
-          <p><%= simple_format(h(@post.content)) %></p>
+  <% if show_profile_fallback %>
+    <div class="toppage-profile card my-5">
+      <div class="card-body">
+        <div class="media p-3 border rounded">
+          <%= link_to image_tag(avatar_url(@user), size: "80x80", class: "rounded-circle mr-3", loading: "lazy"),
+              user_path(@user) %>
+          <div class="media-body">
+            <h5><%= @user.username %></h5>
+            <p><%= simple_format(h(@post.content)) %></p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  <% end %>
 
   <div class="reply">
     <div class="text-center">
