--- a/app/views/toppages/follows.html.erb
+++ b/app/views/toppages/follows.html.erb
@@ -1,7 +1,7 @@
 <div class="profile py-4">
   <div class="text-center">
     <h1>友だち</h1>
-    <p>Twitterでフォローしているユーザーの一覧です。<br>
+    <p>Xでフォローしているユーザーの一覧です。<br>
        ※ 本サイトに登録していないユーザーは表示されません。</p>
   </div>
   <div class="card">
