--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -1,8 +1,10 @@
 <div class="card-body">
   <%= form_with(model: reply, local: true, url: confirm_new_reply_path) do |f| %>
-    <%= f.text_area :content, class: 'form-control', rows: 8 %>
-    <%= f.hidden_field :post_id, value: post.id %>
-    <p class="js-text-count pull-right text-right"></p>
+    <div class="js-text-wrapper">
+      <%= f.text_area :content, class: 'form-control js-text', rows: 8, maxlength: 1000 %>
+      <%= f.hidden_field :post_id, value: post.id %>
+      <p class="js-text-count pull-right text-right"></p>
+    </div>
     <%= f.submit '回答する', class: 'btn btn-info btn-block p-3 mt-3' %>
   <% end %>
 </div>
