--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,11 +20,14 @@ body {
 }
 
 .content-wrapper {
-  max-width: 760px;
+  max-width: 820px;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .main {
   background-image: url("back.jpg");
+  padding-bottom: 3rem;
 }
 
 .card {
@@ -100,6 +103,55 @@ a {
   margin-top: 0;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+}
+
+.navbar-top {
+  gap: 0.75rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  flex-wrap: wrap;
+}
+
+.post-body-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.form-footer .btn {
+  min-width: 120px;
+}
+
+.form-footer .js-text-count {
+  min-width: 90px;
+  text-align: right;
+}
+
+@media (max-width: 576px) {
+  .content-wrapper {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .navbar-top {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .card {
+    border-radius: 0.875rem;
+  }
+
+  .form-footer {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.35rem;
+  }
+
+  .form-footer .js-text-count {
+    text-align: left;
+  }
 }
 
 .btn-solid-primary {
