--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav justify-content-center align-items-center py-3">
+<ul class="nav navbar-top justify-content-center align-items-center py-3">
   <li class="nav-item mr-4">
     <%= link_to(user_signed_in? ? toppages_show_path : root_path, class: "navbar-brand font-weight-bold text-dark d-inline-flex align-items-center") do %>
       <%= image_tag asset_path('favicon.png'), size: "24x24", class: "mr-2" %>
