--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,8 +2,10 @@
   <%= form_with(model: [user, post], local: true, url: confirm_new_user_post_path(current_user)) do |f| %>
     <div class="js-text-wrapper">
       <%= f.text_area :content, class: 'form-control js-text', rows: 8, maxlength: 1000, style: "resize: none;" %>
-      <p class="js-text-count pull-right text-right"></p>
+      <div class="form-footer d-flex align-items-center justify-content-between mt-2">
+        <%= f.submit '質問する', class: 'btn btn-info px-4 py-2' %>
+        <span class="js-text-count text-muted small"></span>
+      </div>
     </div>
-    <%= f.submit '質問する', class: 'btn btn-info btn-block p-3 mt-3' %>
   <% end %>
 </div>
