--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
     image: share_image
  } %>
 
-<%= image_tag(@post.image, width: "690", class: "img-fluid shadow-lg rounded-4", loading: "lazy") if @post.image.attached? %>
+<%= image_tag(@post.image, class: "img-fluid shadow-lg rounded-4 post-image", loading: "lazy") if @post.image.attached? %>
 
 <% is_owner = current_user == @user %>
 <% show_profile_fallback = !@post.image.attached? %>
