--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,10 +7,10 @@
   </li>
   <% if user_signed_in? %>
     <li class="nav-item">
-      <%= link_to '自分', user_path(current_user), class: "nav-link px-3" %>
+      <%= link_to 'マイページ', user_path(current_user), class: "nav-link px-3" %>
     </li>
     <li class="nav-item">
-      <%= link_to '設定', toppages_edit_path, class: "nav-link px-3" %>
+      <%= link_to 'アカウント設定', toppages_edit_path, class: "nav-link px-3" %>
     </li>
     <li class="nav-item">
       <%= link_to '質問する', new_user_post_path(current_user), class: "btn btn-solid-primary px-4 py-2" %>
