--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -141,6 +141,13 @@ html {
   overflow-y: scroll;
 }
 
+.post-author-link {
+  display: inline-flex;
+  align-items: center;
+  gap: 0.35rem;
+  font-weight: 600;
+}
+
 @media (max-width: 576px) {
   .content-wrapper {
     padding-left: 0.75rem;
