--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -4,7 +4,7 @@
     <div class="js-text-wrapper">
       <%= f.text_area :content, class: 'form-control js-text', rows: 8, maxlength: 1000, style: "resize: none;" %>
       <div class="form-footer d-flex align-items-center justify-content-end mt-2">
-        <span class="js-text-count text-muted small mr-2"></span>
+        <span class="js-text-count text-muted small mr-2">0/1000</span>
         <%= f.submit '回答する', class: 'btn btn-info px-4 py-2' %>
       </div>
     </div>
