--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,7 +42,7 @@
     </div>
   <% end %>
   <div class="d-flex justify-content-end mb-3">
-    <%= link_to "#{@user.username}さんのページへ", user_path(@user), class: "post-author-link text-muted" %>
+    <%= link_to "#{@user.username}さんのページへ", user_path(@user), class: "post-author-link text-muted h5 mb-0" %>
   </div>
 
   <div class="reply">
