Make header sticky, tighten spacing, and fix counter binding order

--- a/app/views/toppages/show.html.erb
+++ b/app/views/toppages/show.html.erb
@@ -1,7 +1,7 @@
-<div class="other-posts my-5">
-  <div class="text-center">
-    <h1>みんなの質問</h1>
-    <p>本サイトに登録しているユーザーの質問です。<br>
+<div class="other-posts my-4">
+  <div class="text-center mb-3">
+    <h1 class="mb-2">みんなの質問</h1>
+    <p class="mb-2">本サイトに登録しているユーザーの質問です。<br>
       回答はすべて匿名で送られるので、気楽に答えてみましょう。</p>
   </div>
   <%= render 'posts/posts', user: current_user, posts: @open_posts %>
