Tighten nav labels, spacing, and author link; reduce mobile/header height

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="container-fluid bg-white border-bottom">
+    <div class="container-fluid bg-white border-bottom header-sticky">
       <%= render 'layouts/navbar' %>
     </div>
     <div class="main py-5">
