--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,16 +7,16 @@
   </li>
   <% if user_signed_in? %>
     <li class="nav-item">
-      <%= link_to 'マイページ', user_path(current_user), class: "nav-link px-3" %>
+      <%= link_to 'マイ', user_path(current_user), class: "nav-link px-2" %>
     </li>
     <li class="nav-item">
-      <%= link_to 'みんなの質問', toppages_show_path, class: "nav-link px-3" %>
+      <%= link_to 'みん問', toppages_show_path, class: "nav-link px-2" %>
     </li>
     <li class="nav-item">
-      <%= link_to 'アカウント設定', toppages_edit_path, class: "nav-link px-3" %>
+      <%= link_to '設定', toppages_edit_path, class: "nav-link px-2" %>
     </li>
     <li class="nav-item">
-      <%= link_to '質問する', new_user_post_path(current_user), class: "btn btn-solid-primary px-4 py-2" %>
+      <%= link_to '質問', new_user_post_path(current_user), class: "btn btn-solid-primary px-3 py-2" %>
     </li>
   <% else %>
     <li class="nav-item">
