Inline counter scripts and align header/nav width

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,10 @@
   </head>
 
   <body>
-    <div class="container-fluid bg-white border-bottom header-sticky">
-      <%= render 'layouts/navbar' %>
+    <div class="bg-white border-bottom header-sticky">
+      <div class="container content-wrapper py-2">
+        <%= render 'layouts/navbar' %>
+      </div>
     </div>
     <div class="main py-5">
       <div class="container content-wrapper">
