--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ body {
 .main {
   background-image: url("back.jpg");
   padding-bottom: 3rem;
-  padding-top: 64px;
+  padding-top: 32px;
 }
 
 .card {
@@ -111,8 +111,8 @@ a {
 
 .navbar-top {
   gap: 0.75rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 0;
+  padding-right: 0;
   flex-wrap: wrap;
 }
 
