--- a/app/views/toppages/_landing.html.erb
+++ b/app/views/toppages/_landing.html.erb
@@ -9,12 +9,12 @@
 </div>
 <div class="description my-3">
   <div class="text-center">
-    <h3 class="my-3">Questerの使い方</h3>
+    <h3 class="my-3">使い方</h3>
     <h5>1.登録/ログインする</h5>
     <p>Xアカウントを使って登録/ログインしましょう。</p>
     <h5>2.質問する</h5>
     <p>疑問に思うことがあれば、何でも質問してみましょう。</p>
     <h5>3.回答する</h5>
-    <p>フォローしている方々の質問にも答えてみましょう。<br>回答は匿名なので、気楽に送ってみましょう。</p>
+    <p>回答は匿名なので、気楽に送ってみましょう。</p>
   </div>
 </div>
