--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,28 +1,34 @@
-<ul class="nav navbar-top justify-content-start align-items-center py-3">
-  <li class="nav-item mr-4">
-    <%= link_to(guide_path, class: "navbar-brand font-weight-bold text-dark d-inline-flex align-items-center") do %>
+<nav class="navbar-top d-flex align-items-center justify-content-between w-100 flex-wrap">
+  <div class="nav-brand d-flex align-items-center mr-3">
+    <%= link_to(guide_path, class: "navbar-brand font-weight-bold text-dark d-inline-flex align-items-center p-0") do %>
       <%= image_tag asset_path('favicon.png'), size: "24x24", class: "mr-2" %>
       Quester
     <% end %>
-  </li>
+  </div>
   <% if user_signed_in? %>
-    <li class="nav-item">
-      <%= link_to 'マイページ', user_path(current_user), class: "nav-link px-2" %>
-    </li>
-    <li class="nav-item">
-      <%= link_to 'みんなの質問', toppages_show_path, class: "nav-link px-2" %>
-    </li>
-    <li class="nav-item">
-      <%= link_to toppages_edit_path, class: "nav-link px-2" do %>
-        <i class="fas fa-cog"></i>
-      <% end %>
-    </li>
-    <li class="nav-item ml-auto">
-      <%= link_to '質問する', new_user_post_path(current_user), class: "btn btn-solid-primary px-3 py-2" %>
-    </li>
+    <ul class="nav align-items-center flex-wrap navbar-links mb-0">
+      <li class="nav-item">
+        <%= link_to 'マイページ', user_path(current_user), class: "nav-link px-2" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'みんなの質問', toppages_show_path, class: "nav-link px-2" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to '質問する', new_user_post_path(current_user), class: "btn btn-solid-primary px-3 py-2 ml-md-2" %>
+      </li>
+    </ul>
+    <div class="dropdown ml-auto">
+      <button class="btn btn-link nav-link dropdown-toggle d-flex align-items-center avatar-toggle p-0" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <%= image_tag(avatar_url(current_user), size: "36x36", class: "rounded-circle avatar-thumb") %>
+      </button>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+        <%= link_to 'アカウント設定', toppages_edit_path, class: "dropdown-item" %>
+        <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item", data: { turbo: false } %>
+      </div>
+    </div>
   <% else %>
-    <li class="nav-item">
+    <div class="ml-auto">
       <%= link_to "Xでログイン", user_twitter_omniauth_authorize_path, method: :post, class: "btn btn-outline-primary px-4", data: { turbo: false } %>
-    </li>
+    </div>
   <% end %>
-</ul>
+</nav>
