Highlight tabs, tidy owner buttons, and navbar tweaks

--- a/app/views/posts/_edit_form.html.erb
+++ b/app/views/posts/_edit_form.html.erb
@@ -1,9 +1,15 @@
-<%= form_with(model: [user, post], local: true) do |f| %>
-  <% if post.status %>
-    <%= f.submit '締め切る', class: 'btn btn-secondary btn-block mt-2' %>
-  <% else %>
-    <%= f.submit '回答を受け付ける', class: 'btn btn-secondary btn-block mt-2' %>
+<div class="d-flex flex-wrap justify-content-center gap-2">
+  <%= link_to 'Xで共有', "https://x.com/intent/post?text=#{ERB::Util.url_encode("#{post.user.username}さんの質問です #MyQuestion")}&url=#{CGI.escape(request.original_url)}",
+      class: "btn btn-solid-primary px-4 py-2", target: "_blank", rel: "noopener", data: { turbo: false } %>
+
+  <%= form_with(model: [user, post], local: true, class: "m-0") do |f| %>
+    <% if post.status %>
+      <%= f.submit '締め切る', class: 'btn btn-ghost px-4 py-2' %>
+    <% else %>
+      <%= f.submit '回答を受け付ける', class: 'btn btn-ghost px-4 py-2' %>
+    <% end %>
   <% end %>
-<% end %>
-<%= link_to '削除する', [user, post], method: :delete, data: { confirm: "この質問を削除しますか？" },
-    class: 'btn btn-light btn-block mt-2' %>
+
+  <%= link_to '削除する', [user, post], method: :delete, data: { confirm: "この質問を削除しますか？" },
+      class: 'btn btn-solid-danger px-4 py-2' %>
+</div>
