--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
   <% if user_signed_in? %>
     <ul class="nav align-items-center flex-wrap navbar-links mb-0">
       <li class="nav-item">
-        <%= link_to 'マイページ', user_path(current_user), class: "nav-link px-2" %>
+        <%= link_to '自分の質問', user_path(current_user), class: "nav-link px-2" %>
       </li>
       <li class="nav-item">
         <%= link_to 'みんなの質問', toppages_show_path, class: "nav-link px-2" %>
