--- a/app/views/posts/_edit_form.html.erb
+++ b/app/views/posts/_edit_form.html.erb
@@ -1,5 +1,6 @@
+<% share_text = "#{post.user.username}さんの質問: #{truncate(post.content, length: 120)} #MyQuestion" %>
 <div class="d-flex flex-wrap justify-content-center gap-2">
-  <%= link_to 'Xで共有', "https://x.com/intent/post?text=#{ERB::Util.url_encode("#{post.user.username}さんの質問です #MyQuestion")}&url=#{CGI.escape(request.original_url)}",
+  <%= link_to 'Xで共有', "https://x.com/intent/post?text=#{ERB::Util.url_encode(share_text)}&url=#{CGI.escape(request.original_url)}",
       class: "btn btn-ghost px-4 py-2", target: "_blank", rel: "noopener", data: { turbo: false } %>
 
   <%= form_with(model: [user, post], local: true, class: "m-0") do |f| %>
