--- a/app/views/posts/_edit_form.html.erb
+++ b/app/views/posts/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<% share_text = "#{post.user.username}さんの質問: #{truncate(post.content, length: 120)} #MyQuestion" %>
+<% share_text = "#{post.user.username}さんが質問を募集しています。匿名で回答してください #Quester" %>
 <div class="d-flex flex-wrap justify-content-center gap-2">
   <%= link_to 'Xで共有', "https://x.com/intent/post?text=#{ERB::Util.url_encode(share_text)}&url=#{CGI.escape(request.original_url)}",
       class: "btn btn-ghost px-4 py-2", target: "_blank", rel: "noopener", data: { turbo: false } %>
