--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,17 @@
 <% share_image = @post.image.attached? ? rails_blob_url(@post.image, host: request.base_url) : image_url('default.png') %>
+<% share_title = "#{@user.username}@Quester" %>
+<% share_description = "#{@user.username}さんの質問です。「#{@post.content}」" %>
 <% set_meta_tags og: {
-    title: "#{@user.username}@Quester",
-    description: "#{@user.username}さんの質問です。「#{@post.content}」",
-    image: share_image
- } %>
+                  title: share_title,
+                  description: share_description,
+                  image: share_image
+                },
+                twitter: {
+                  card: 'summary_large_image',
+                  title: share_title,
+                  description: share_description,
+                  image: share_image
+                } %>
 
 <%= image_tag(@post.image, class: "img-fluid shadow-lg rounded-4 post-image", loading: "lazy") if @post.image.attached? %>
 
