--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,11 +13,12 @@
       <li class="nav-item">
         <%= link_to 'みんなの質問', toppages_show_path, class: "nav-link px-2" %>
       </li>
-      <li class="nav-item d-none d-md-block ml-md-2">
-        <%= link_to '質問する', new_user_post_path(current_user), class: "btn btn-solid-primary px-3 py-2" %>
-      </li>
     </ul>
-    <div class="dropdown ml-auto">
+    <div class="d-flex align-items-center ml-auto">
+      <div class="nav-item d-none d-md-block mr-3">
+        <%= link_to '質問する', new_user_post_path(current_user), class: "btn btn-solid-primary px-3 py-2" %>
+      </div>
+      <div class="dropdown">
       <button class="btn btn-link nav-link dropdown-toggle d-flex align-items-center avatar-toggle p-0" type="button" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <%= image_tag(avatar_url(current_user), size: "36x36", class: "rounded-circle avatar-thumb") %>
       </button>
@@ -25,6 +26,7 @@
         <%= link_to 'アカウント設定', toppages_edit_path, class: "dropdown-item" %>
         <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item", data: { turbo: false } %>
       </div>
+    </div>
     </div>
   <% else %>
     <div class="ml-auto">
